# markitdown-app

./: .gitignore  LICENSE  README.md  installer.iss  pyproject.toml  requirements.txt
.github/workflows/: release.yml
app/: converter.py  main.py  ui.py
